# agent-harness-board

./: .gitignore  README.md  board_policy.yaml  pyproject.toml
.github/workflows/: ci.yml
adapters/: autogen.py  crewai.py  langchain.py  mcp_server.py  openai_tools.json
cli/: main.py
coordinator/: agent.py
daemon/: audit.py  deadlock.py  lease_store.py  main.py  policy_engine.py
interception/: fuse_mount.py
tests/: test_daemon.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: AdaptersPanel.jsx  AgentFeed.jsx  App.jsx  ConflictLog.jsx  GraphPanel.jsx  InterceptionPanel.jsx  LeaseTable.jsx  PolicyPanel.jsx
