[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "agent-harness-board"
version     = "0.1.0"
description = "Resource lease registry and command center for AI agents"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.11"

keywords = ["ai", "agents", "resource-management", "observability", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
adapters = [
    "langchain-core>=0.2",
    "crewai>=0.51",
    "pyautogen>=0.2",
]
coordinator = [
    "anthropic>=0.28",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]
all = [
    "agent-harness-board[adapters,coordinator,dev]",
]

[project.scripts]
agent-harness-board = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["daemon", "adapters", "coordinator", "cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
